salesforce-main/src/main/default/objects/Application_Review__c/Application_Review__c.object-meta.xml
<CustomObject>
    <description>This object tracks reviews against Applications(Opportunities) and provides an audit including comments and reviewing users.</description>
    <label>Application Review</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Application Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>