salesforce-main/src/main/default/objects/Application_Review__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>The Application (Opportunity) that this review is related to</description>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application Reviews</relationshipLabel>
    <relationshipName>Application_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>