salesforce-main/src/main/default/objects/Application_Review__c/fields/Feedback_Required__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Required</label>
    <type>Checkbox</type>
</CustomField>